Updated padding around photo and nav links

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background: coral;
 }
 
-h1, p {
+h1, p, .nav-links {
     text-align: center;
 }
 
@@ -15,13 +15,14 @@ p {
     margin: 20px;
 }
 
-.nav-links {
-    display: flex;
-    justify-content: space-around;
+.nav-links a {
+    
+    padding: 30px;
     
 }
 
 img {
     display: block;
     margin: 0 auto;
+    padding: 40px;
 }
